# actxol

./: .env.dev  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: config.rs  config_postgres.rs  constants.rs  main.rs  model.rs
src/configs/: db.rs
src/handlers/: mod.rs  qr_handler.rs  user_handler.rs  welcome_handler.rs
src/models/: error_model.rs
static/: post.html  welcome.html
static/css/: style.css
static/js/: index.js
