[package]
name = "actxol"
version = "0.1.0"
authors = ["Ashaffah <ashaffarafi@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-files = "0.6.6"
actix-http = "3.9.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
async-stream = "0.3.6"
env_logger = "0.11.5"
log = "0.4"
qirust = "0.1.9"
actix-cors = "0.7.0"
mongodb = "3.1.0"
postgres = "0.19.9"
